<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mt</groupId>
    <artifactId>maven-web-application</artifactId>
    <packaging>war</packaging>
    <version>3.1.2-SNAPSHOT</version>

    <name>maven-web-application</name>
    <description>Maven Web Project for Java Project</description>

    <organization>
        <name>JOMACS IT SOLUTIONS</name>
        <url>http://jomacsit.com/</url>
    </organization>

    <properties>
        <jdk.version>1.8</jdk.version>
        <spring.version>5.1.2.RELEASE</spring.version>
        <junit.version>4.11</junit.version>
        <log4j.version>1.2.17</log4j.version>
        <sonar.host.url>http://18.221.207.24:9000/</sonar.host.url>
        <sonar.login>admin</sonar.login>
        <sonar.password>admin</sonar.password>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <!-- Your dependencies here -->
    </dependencies>

    <distributionManagement>
        <repository>
            <id>nexus</id>
            <name>JOMACS Releases Nexus Repository</name>
            <url>http://172.31.54.85:8081/repository/gtb-app-release/</url>
        </repository>

        <snapshotRepository>
            <id>nexus</id>
            <name>JOMACS Snapshot Nexus Repository</name>
            <url>http://172.31.54.85:8081/repository/gtb-app-snapshot/</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <finalName>web-app</finalName>

        <plugins>
            <!-- Other plugins -->

            <!-- Sonar Maven Plugin with Bypass Module Configuration -->
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>4.0.0.4121</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>sonar</goal>
                        </goals>
                        <configuration>
                            <!-- Add the necessary JVM argument to bypass module access restrictions -->
                            <javaOpts>
                                <arg>-Dsonar.java.binaries=target/classes</arg>
                                <arg>-Dsonar.java.source=17</arg>
                                <arg>-Dsonar.java.target=17</arg>
                                <arg>-Dsonar.java.jdkHome=${env.JDK_HOME}</arg>
                                <arg>-Dsonar.verbose=true</arg>
                                <arg>--add-opens java.base/java.lang=ALL-UNNAMED</arg> <!-- JVM arg for bypassing module system -->
                            </javaOpts>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Add other plugins here -->
        </plugins>
    </build>
</project>
